-Adding reflect-metadata to avoid the error "Reflect.getMetadata is not a function"

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,7 +6,8 @@
     "experimentalDecorators": true,
     "sourceMap": true,
     "declaration": true,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "target": "ES2015",
   },
   "exclude": [
     "/dist",
