--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "class-validator": "^0.12.2",
     "core-js": "^3.6.5",
     "quasar": "^1.0.0",
+    "reflect-metadata": "^0.1.13",
     "uuid": "^8.3.0",
     "vue-class-component": "^7.2.2",
     "vue-i18n": "^8.0.0",
