--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,11 +7,16 @@
     "sourceMap": true,
     "declaration": true,
     "noImplicitAny": false,
-    "target": "ES2015",
+    "module": "ES2015",
   },
   "exclude": [
     "/dist",
     ".quasar",
     "node_modules"
+  ],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue"
   ]
 }
