--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,7 +7,8 @@
     "sourceMap": true,
     "declaration": true,
     "noImplicitAny": false,
-    "module": "ES2015",
+    "module": "ESNext",
+    "moduleResolution": "node",
   },
   "exclude": [
     "/dist",
