--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "core-js": "^3.6.5",
     "quasar": "^1.0.0",
     "reflect-metadata": "^0.1.13",
+    "underscore": "^1.10.2",
     "uuid": "^8.3.0",
     "vue-class-component": "^7.2.2",
     "vue-i18n": "^8.0.0",
