--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,11 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "core-js": "^3.6.5",
+    "prosemirror-utils": "^0.9.6",
     "quasar": "^1.0.0",
     "reflect-metadata": "^0.1.13",
+    "tiptap": "^1.29.4",
+    "tiptap-extensions": "^1.32.1",
     "underscore": "^1.10.2",
     "uuid": "^8.3.0",
     "vue-class-component": "^7.2.2",
