--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,30 +16,30 @@
     "build-staging": "API_URL=http://api.dd-staging.wizardforyou.com/api quasar build"
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
+    "@quasar/extras": "^1.9.4",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "core-js": "^3.6.5",
     "prosemirror-utils": "^0.9.6",
-    "quasar": "^1.0.0",
+    "quasar": "^1.13.1",
     "reflect-metadata": "^0.1.13",
-    "tiptap": "^1.29.4",
-    "tiptap-extensions": "^1.32.1",
+    "tiptap": "^1.29.6",
+    "tiptap-extensions": "^1.32.5",
     "underscore": "^1.10.2",
     "uuid": "^8.3.0",
     "vue-class-component": "^7.2.2",
-    "vue-i18n": "^8.0.0",
+    "vue-i18n": "^8.21.0",
     "vue-property-decorator": "^8.3.0",
-    "vuedraggable": "^2.24.0"
+    "vuedraggable": "^2.24.1"
   },
   "devDependencies": {
-    "@quasar/app": "^2.0.0",
+    "@quasar/app": "^2.0.8",
     "@types/node": "^10.17.15",
-    "@types/uuid": "^8.0.0",
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
-    "@typescript-eslint/parser": "^3.3.0",
+    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
     "babel-eslint": "^10.0.1",
-    "eslint": "^6.8.0",
+    "eslint": "^7.7.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.14.0",
@@ -49,7 +49,8 @@
     "eslint-plugin-vue": "^6.1.2",
     "quasar-app-extension-api-wrapper": "^0.1.2",
     "quasar-app-extension-nequ-components": "^0.7.0",
-    "quasar-app-extension-vuelidate-rules": "^0.3.1"
+    "quasar-app-extension-vuelidate-rules": "^0.3.1",
+    "typescript": "^3.9.7"
   },
   "browserslist": [
     "ie >= 11",
