--- a/backend/package.json
+++ b/backend/package.json
@@ -26,10 +26,10 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "cd ./test && jest --config ./jest-e2e.json --silent=false && cd ..",
     "typeorm": "ts-node --transpile-only --files -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config database/cli-config.ts",
-    "migration:run": "npm run typeorm migration:run",
-    "migration:create": "npm run typeorm migration:create -n ",
-    "migration:revert": "npm run typeorm migration:revert",
-    "migration:refresh": "npm run typeorm schema:drop && npm run migration:run",
+    "migration:run": "npm run typeorm -- migration:run",
+    "migration:create": "npm run typeorm -- migration:create -n ",
+    "migration:revert": "npm run typeorm -- migration:revert",
+    "migration:refresh": "npm run typeorm -- schema:drop && npm run migration:run",
     "migration:generate": "npm run typeorm -- migration:generate -n ",
     "start:db": "./start_db.sh -n dd_back_net",
     "stop:db": "docker rm $(docker stop db_server)"
