--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,3 +13,5 @@ S3_ACCESS_KEY=
 S3_SECRET=
 S3_ENDPOINT=sfo2.digitaloceanspaces.com
 S3_BUCKET=nequ
+
+PUBLIC_PDF_URL=http://localhost:8080/embed/document/view
