--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "",
   "author": "Roberto Langarica <roberto@wizardforyou.com>",
   "repository": "https://github.com/RobertoLangarica/dynamic-documents.git",
@@ -47,6 +47,7 @@
     "class-transformer": "latest",
     "class-validator": "latest",
     "curl": "^0.1.4",
+    "puppeteer": "^7.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
@@ -62,6 +63,7 @@
     "@types/express": "^4.17.1",
     "@types/jest": "^26.0.0",
     "@types/node": "^12.7.5",
+    "@types/puppeteer": "^5.4.3",
     "@types/supertest": "^2.0.8",
     "dotenv": "^8.2.0",
     "jest": "^26.0.0",
