Disabling backend tests

--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -7,42 +7,42 @@ on:
       - release_back
       - staging_back
 jobs:
-  test:
-    # Containers must run in Linux based operating systems
-    runs-on: ubuntu-latest
+  # test:
+  #   # Containers must run in Linux based operating systems
+  #   runs-on: ubuntu-latest
 
-    # Service containers to run with `container-job`
-    services:
-      postgres:
-        image: postgres:11.8
-        env:
-          POSTGRES_PASSWORD: admin
-        # Set health checks to wait until postgres has started
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          # Maps tcp port 5432 on service container to the host
-          - 5432:5432
-    steps:
-      - name: Checkout last version
-        uses: actions/checkout@v2
+  #   # Service containers to run with `container-job`
+  #   services:
+  #     postgres:
+  #       image: postgres:11.8
+  #       env:
+  #         POSTGRES_PASSWORD: admin
+  #       # Set health checks to wait until postgres has started
+  #       options: >-
+  #         --health-cmd pg_isready
+  #         --health-interval 10s
+  #         --health-timeout 5s
+  #         --health-retries 5
+  #       ports:
+  #         # Maps tcp port 5432 on service container to the host
+  #         - 5432:5432
+  #   steps:
+  #     - name: Checkout last version
+  #       uses: actions/checkout@v2
 
-      # Performs a clean installation of all dependencies in the `package.json` file
-      # For more information, see https://docs.npmjs.com/cli/ci.html
-      - name: Install dependencies
-        working-directory: ./backend
-        run: npm ci
+  #     # Performs a clean installation of all dependencies in the `package.json` file
+  #     # For more information, see https://docs.npmjs.com/cli/ci.html
+  #     - name: Install dependencies
+  #       working-directory: ./backend
+  #       run: npm ci
 
-      - name: Create test database
-        working-directory: ./backend/test
-        run: ./init_test_db.sh
+  #     - name: Create test database
+  #       working-directory: ./backend/test
+  #       run: ./init_test_db.sh
 
-      - name: Run tests
-        working-directory: ./backend
-        run: npm run test:e2e
+  #     - name: Run tests
+  #       working-directory: ./backend
+  #       run: npm run test:e2e
 
   build:
     needs: migration
@@ -112,7 +112,7 @@ jobs:
           "pm2 restart "$PROCESS_NAME""
 
   migration:
-    needs: test
+    # needs: test
     runs-on: ubuntu-latest
     env:
       SERVER: fid@68.183.171.182
