--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -9,30 +9,50 @@ on:
 jobs:
   front_build:
     runs-on: ubuntu-latest
+    
+    # Service containers to run with `container-job`
+    services:
+      redis:
+        image: redis
+        ports:
+          - 6379:6379
+        options: --entrypoint redis-server
+
     env:
       SERVER: fid@68.183.171.182
+
     steps:
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "12.x"
       # Setting the stage based on the branch
       - name: Set stage
         run: |
           BRANCH=$(echo $GITHUB_REF | rev | cut -d "/" -f 1 | rev) \
-          && echo "::set-env name=BRANCH::$BRANCH"
+          && echo "BRANCH=$BRANCH" >> $GITHUB_ENV
       # RELEASE values
       - name: Release values
         run: |
-          echo "::set-env name=REMOTE_DIR::~/dd/production"
+          echo "REMOTE_DIR=~/dd/production" >> $GITHUB_ENV
         if: env.BRANCH == 'release_front'
       
       # STAGING values
       - name: Staging values
         run: |
-          echo "::set-env name=REMOTE_DIR::~/dd/staging"
+          echo "REMOTE_DIR=~/dd/staging" >> $GITHUB_ENV
         if: env.BRANCH == 'staging_front'
 
       - uses: actions/checkout@v2
       - name: Getting latest version
         run: git checkout
-      - name: Instalando dependencias
+
+      - name: Recover npm cache
+        uses: actions/cache@v1
+        with:
+          path: ./frontend/node_modules
+          key: ${{ hashFiles('package.json') }}
+
+      - name: Installing npm dependencies
         run: |
           cd frontend
           npm install
