--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,17 +1,45 @@
-APP_ENV=local
-APP_URL=http://localhost
+HOST=127.0.0.1
+PORT=3333
+NODE_ENV=development
+APP_URL=http://${HOST}:${PORT}
 
-# Database credentials for the application
-DB_HOST=localhost
+CACHE_VIEWS=false
+
+APP_KEY=
+
+DB_CONNECTION=pg
+DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=nequ
-DB_USERNAME=nequ
-DB_PASSWORD=nequ
+DB_USER=postgres
+DB_PASSWORD=
+DB_DATABASE=fiduciaria
 
-S3_REGION=sfo2
-S3_ACCESS_KEY=
-S3_SECRET=
-S3_ENDPOINT=sfo2.digitaloceanspaces.com
-S3_BUCKET=nequ
+SESSION_DRIVER=cookie
+HASH_DRIVER=bcrypt
 
-PUBLIC_PDF_URL=http://localhost:8080/embed/document/view
+MAIL_CONNECTION=mailgun
+MAIL_FROM=notifications@portal.promotoraprofile.com
+
+MAILGUN_DOMAIN=notifications.wizardforyou.com
+MAILGUN_API_KEY=pending
+
+ITEMS_PER_PAGE=25
+GRACE_PERIOD_DAYS=5
+
+PHANTOMJS_CLOUD_API_KEY=aa-bbbbb-ccccc-ddddd-eeeee-fffff
+
+USER_LOGIC=
+PASS_LOGIC=
+USER_PREVENCION=
+PASS_PREVENCION=
+
+SPACES_URL=https://fiduciaria.sfo2.digitaloceanspaces.com/
+SPACES_KEY=
+SPACES_SECRET=
+SPACES_ENDPOINT=sfo2.digitaloceanspaces.com
+SPACES_BUCKET=fiduciaria
+SPACES_REGION=sfo2
+
+# Documentos Dinámicos
+DD_APISECRET=9a5aac59-0c8c-439e-a4f3-f48d5d0b2098
+DD_API=http://localhost:3000/api
